# SCUBAS

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  compile.py  compile.sh  configure.py  env.yml  mkdocs.yml  prebuilt.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: cables.rst  conductivity.rst  conf.py  index.md  index.rst  modules.rst  plotlib.rst  requirements.txt  scubas.rst
docs/css/: scubas.css
docs/dev/: cables.md  conductivity.md  datasets.md  index.md  models.md  plotlib.md  sources.md  utils.md
docs/javascripts/: katex.js
docs/tutorial/: 1989.md  active.md  conduct.md  elsc.md  eva.md  netmodel.md  theory.md  uq.md
docs/user/: citing.md  install.md  intermagnet.md
examples/: network_1989.py  network_active.py  network_cases.py  network_model.py
examples/datasets/1989/: FRD.csv  HAD.csv  STJ.csv
scripts/: SCUBAS | Frontier Paper | Test Cases.ipynb  SCUBAS | TC: Electrical Length.ipynb  SCUBAS | TC: TLM.ipynb  conf.py
scubas/: cables.py  conductivity.py  currents.py  datasets.py  models.py  plotlib.py  utils.py
scubas/sources/: current_sources.py
tests/: test_cables.py  test_conductivity.py  test_datasets.py  test_models.py  test_plotlib.py  test_utils.py
