[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scubas"
dynamic = ["version"]
description = "Precision ionospheric radio sounding tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Shibaji Chakraborty"}]
license = {text = "MIT"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scubas"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "pyproj>=3",
  "matplotlib>=3.5",
  "numpy",
  "pandas",
  "loguru",
  "requests",
  "tqdm",
  "toml",
  "SciencePlots",
  "scipy",
]
