[build-system]
requires = ["setuptools>=61.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scubas"
version = "0.1.8"
description = "Precision ionospheric radio sounding tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Shibaji Chakraborty", email = "chakras4@erau.edu"}]
maintainers = [{name = "Shibaji Chakraborty", email = "chakras4@erau.edu"}]
keywords = [
  "Python>=3.6",
  "submarine cable",
  "electrical surge",
  "geomagnetic induction",
  "geomagnetic disturbance",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "matplotlib>=3.3.4",
  "pyproj",
  "loguru",
  "scipy",
  "SciencePlots",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/shibaji7/SCUBAS"
Documentation = "https://scubas.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scubas"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "pyproj>=3",
  "matplotlib>=3.5",
  "numpy",
  "pandas",
  "loguru",
  "requests",
  "tqdm",
  "toml",
  "SciencePlots",
  "scipy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["scubas*"]
